ajustes pedido gprc e graphql